Updated DB connection to not use plain text

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+db_settings.ini
 
 # Created by https://www.gitignore.io/api/java,windows,intellij
 # Edit at https://www.gitignore.io/?templates=java,windows,intellij
